Set SaslMechanism Anonymous
by default

Signed-off-by: Gabriele Santomaggio <G.santomaggio@gmail.com>

--- a/.ci/ubuntu/rabbitmq.conf
+++ b/.ci/ubuntu/rabbitmq.conf
@@ -22,4 +22,5 @@ ssl_options.depth      = 1
 ssl_options.fail_if_no_peer_cert = false
 
 auth_mechanisms.1 = PLAIN
-auth_mechanisms.2 = EXTERNAL
+auth_mechanisms.2 = ANONYMOUS
+auth_mechanisms.3 = EXTERNAL
