--- a/.ci/ubuntu/rabbitmq.conf
+++ b/.ci/ubuntu/rabbitmq.conf
@@ -24,6 +24,7 @@ auth_mechanisms.1 = PLAIN
 auth_mechanisms.2 = ANONYMOUS
 auth_mechanisms.3 = EXTERNAL
 
-
 auth_backends.1 = internal
 auth_backends.2 = rabbit_auth_backend_oauth2
+
+load_definitions = /etc/rabbitmq/definitions.json
