--- a/.ci/ubuntu/rabbitmq.conf
+++ b/.ci/ubuntu/rabbitmq.conf
@@ -17,10 +17,14 @@ ssl_options.cacertfile = /etc/rabbitmq/certs/ca_certificate.pem
 ssl_options.certfile   = /etc/rabbitmq/certs/server_localhost_certificate.pem
 ssl_options.keyfile    = /etc/rabbitmq/certs/server_localhost_key.pem
 ssl_options.verify     = verify_peer
-ssl_options.password   = grapefruit
 ssl_options.depth      = 1
 ssl_options.fail_if_no_peer_cert = false
 
 auth_mechanisms.1 = PLAIN
 auth_mechanisms.2 = ANONYMOUS
 auth_mechanisms.3 = EXTERNAL
+
+auth_backends.1 = internal
+auth_backends.2 = rabbit_auth_backend_oauth2
+
+load_definitions = /etc/rabbitmq/definitions.json
