--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ go.work.sum
 coverage.txt
 .DS_Store
 .ci/ubuntu/log/rabbitmq.log
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+!*.code-workspace
+
+# Built Visual Studio Code Extensions
+*.vsix
